tests/macro-tests/cases/widget_new/unknown_member_in_when_expr2.stderr
error[E0599]: no method named `__w_unknown__` found for struct `zng_wgt_input::state::is_pressed_inputs__` in the current scope
 --> cases/widget_new/unknown_member_in_when_expr2.rs:7:16
  |
7 |         when *#is_pressed.unknown {
  |                ^^^^^^^^^^
  |
help: there is a method `__w_0__` with a similar name
  |
7 -         when *#is_pressed.unknown {
7 +         when *#__w_0__.unknown {
  |
